# CLEO5TestBuild

./: .gitignore  .gitmodules  CHANGELOG.md  CLEO Changes.txt  CLEO4.sln  CLEO4.vcxproj  CLEO4.vcxproj.filters  CLEO5.sln  CLEO5.vcxproj  CLEO5.vcxproj.filters  CMakeLists.txt  LICENSE.md  README.md  SETUP.md  pack_release.bat  setup_env.bat
.github/: dependabot.yml
.github/workflows/: main.yml  markdown.js  test.yml  version.js
CLEO4/: CCustomOpcodeSystem.cpp  CCustomOpcodeSystem.h  CLEO.APS  CLEO.rc  CLEO4.vcxproj  CLEO4.vcxproj.filters  CScriptEngine.cpp  CScriptEngine.h  cleo.def  cleo.h  stdafx.h
cleo_plugins/: CLEO_Plugins.sln  Resource.rc
cleo_plugins/Audio/: Audio.cpp  Audio.filters  Audio.vcxproj  Audio.vcxproj.filters  C3DAudioStream.cpp  C3DAudioStream.h  CAudioStream.cpp  CAudioStream.h  CSoundSystem.cpp  CSoundSystem.h  SA.Audio.ini
cleo_plugins/DebugUtils/: DebugUtils.cpp  DebugUtils.ini  DebugUtils.vcxproj  DebugUtils.vcxproj.filters  SA.DebugUtils.ini  ScreenLog.cpp  ScreenLog.h  ScriptLog.h  Utils.h
cleo_plugins/FileSystemOperations/: FileSystemOperations.cpp  FileSystemOperations.vcxproj  FileSystemOperations.vcxproj.filters  FileUtils.cpp  FileUtils.h  Utils.h
cleo_plugins/IniFiles/: IniFiles.cpp  IniFiles.vcxproj  IniFiles.vcxproj.filters
cleo_plugins/Math/: Math.cpp  (+2 more)
cleo_sdk/: CLEO.cpp  CLEO.h  CLEO.lib  CLEO_Utils.h
examples/: Audio_Demo.txt  Check_CLEO_Version.txt  Free_ID_Lister.txt  Homie_Help.txt  Limits_Info.txt  Mission_Trigger.txt  Pickup_Shirt.txt  Screen_Drawing.txt  Skin_Selector.txt  Sounds_Browser.txt  Train_Spawner.txt  Vehicle_Flags.txt
modloader_plugin/: CLEO_ModLoader_Plugin.sln  CLEO_ModLoader_Plugin.vcxproj  CLEO_ModLoader_Plugin.vcxproj.filters  Resource.rc
source/: CCodeInjector.cpp  CCodeInjector.h  CCustomOpcodeSystem.cpp  CCustomOpcodeSystem.h  CDebug.cpp  CDebug.h  CDmaFix.cpp  CDmaFix.h  CGameMenu.cpp  CGameMenu.h  CGameVersionManager.cpp  CGameVersionManager.h  CLEO4.APS  CLEO4.rc  CLEO5.rc  CLegacy.cpp  CLegacy.h  CModLoaderSystem.cpp  CModLoaderSystem.h  CModuleSystem.cpp  CModuleSystem.h  CPluginSystem.cpp  CPluginSystem.h  CScriptEngine.cpp  CScriptEngine.h  CSoundSystem.cpp  CSoundSystem.h  CTextManager.cpp  CTextManager.h  CTheScripts.cpp  CTheScripts.h  CleoBase.cpp  CleoBase.h  CleoVersion.h  FileEnumerator.h  Mem.h  OpcodeInfoDatabase.cpp  OpcodeInfoDatabase.h  PluginSdkExternals.cpp  ScmFunction.cpp  (+10 more)
tests/: .cleo_tests_runner.txt  cleo_tests_runner.cs  cleo_tests_runner.txt  test_file_read_write.txt
(+153 files in other folders)
